src/test/ui/type-alias-impl-trait/generic_type_does_not_live_long_enough.nll.stderr
error: at least one trait must be specified
  --> $DIR/generic_type_does_not_live_long_enough.rs:10:24
   |
LL | type WrongGeneric<T> = impl 'static;
   |                        ^^^^^^^^^^^^

error: non-defining opaque type use in defining scope
  --> $DIR/generic_type_does_not_live_long_enough.rs:6:18
   |
LL |     let z: i32 = x;
   |                  ^
   |
note: used non-generic type `&'static i32` for generic parameter
  --> $DIR/generic_type_does_not_live_long_enough.rs:10:19
   |
LL | type WrongGeneric<T> = impl 'static;
   |                   ^

error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/generic_type_does_not_live_long_enough.rs:15:5
   |
LL |     t
   |     ^
   |
   = help: consider adding an explicit lifetime bound `T: 'static`...

error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/generic_type_does_not_live_long_enough.rs:10:24
   |
LL | type WrongGeneric<T> = impl 'static;
   |                        ^^^^^^^^^^^^
   |
   = help: consider adding an explicit lifetime bound `T: 'static`...
   = note: ...so that the type `T` will meet its required lifetime bounds

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0310`.
